testsuite/tests/typecheck/should_run/T10284.stderr
T10284: T10284.hs:14:19: error:
    Couldn't match expected type ‘()’ with actual type ‘Int’
    In the first argument of ‘evaluate’, namely ‘a’
    In the first argument of ‘catch’, namely ‘(evaluate a)’
(deferred type error)
